Improving overall look of the cart and fixing footer behaviour on mobile phones

--- a/src/assets/styles/main.less
+++ b/src/assets/styles/main.less
@@ -7,10 +7,18 @@
 	}
 }
 
+#cartbox h2 {
+	padding-bottom: 20px;
+}
+
 label {
 	sup {
 		color: crimson;
 		font-size: 1.6em;
 		vertical-align: bottom;
 	}
+}
+
+footer {
+	margin-top: 40px;
 }
